@startuml
namespace View{
class MapDisplay{
    +fieldPrefabs: GameObject[]
}

class FieldDisplay{
    +gridPosition: GridPosition
}

class FieldPrefabMapping{
    - mappingDictionary : Dictionary<Type, GameObject>
}
class FieldPrefabPair{
    + FieldTypeName : string
    + Prefab : GameObject
}
}
Class Unity.MonoBehaviour{}
Class Unity.ScriptableObject{}

MonoBehaviour <|-- FieldDisplay

FieldDisplay "1" -- "1\n-field" Model.Field

MonoBehaviour <|-- MapDisplay

MapDisplay "1" -- "1\n-map" Model.Map: displays >

MapDisplay *-- "-displayers" FieldDisplay: manages lifecycle >

FieldPrefabMapping --|> ScriptableObject

FieldPrefabMapping *-- "-mappings" FieldPrefabPair

@enduml